[gd_scene load_steps=15 format=2]

[ext_resource path="res://board/power_ups/power_up.gd" type="Script" id=2]
[ext_resource path="res://assets/effects/sparkle.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/audio/coin_merge.mp3" type="AudioStream" id=4]
[ext_resource path="res://assets/effects/explosion.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/audio/coin_miss.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/audio/power_up.wav" type="AudioStream" id=7]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.492795 )
colors = PoolColorArray( 1, 1, 1, 1, 0.760784, 0.764706, 0.780392, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=6]
lifetime_randomness = 0.63
emission_shape = 1
emission_sphere_radius = 10.0
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 180.0
flatness = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 40.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 100.0
color_ramp = SubResource( 2 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 4.5, 2.5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 4.5, 4.5 )

[sub_resource type="Animation" id=5]
resource_name = "Appear"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sparkle:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AppearAudio:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Explosion:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -1 ), Vector2( 0, -1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AppearAudio:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sparkle:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Explosion:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[node name="PowerUp" type="RigidBody2D"]
collision_layer = 16
collision_mask = 3
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="Explosion" parent="." instance=ExtResource( 5 )]
scale = Vector2( 0.5, 0.5 )
process_material = SubResource( 6 )

[node name="Sparkle" parent="." instance=ExtResource( 3 )]
emitting = true

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 5.5 )
shape = SubResource( 7 )

[node name="BallCollision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BallCollision"]
position = Vector2( 0.5, -3.5 )
shape = SubResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Appear = SubResource( 5 )
anims/Idle = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="AppearAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="PowerUpAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -20.0

[node name="DestroyAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -15.0

[connection signal="body_entered" from="BallCollision" to="." method="_on_BallCollision_body_entered"]
